# microstructure-lab

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: fees.yaml  latency_scenarios.yaml  queue_model.yaml
cpp/bench/: CMakeLists.txt  bench_book_update.cpp
cpp/include/mslab/: book.hpp  event.hpp  execution_sim.hpp  latency_model.hpp
cpp/src/: bindings.cpp  book.cpp  execution_sim.cpp
cpp/tests/: CMakeLists.txt  test_book.cpp  test_execution_sim.cpp
docs/: methodology.md
notebooks/: 01_data_quality.ipynb
python/mslab/backtest/: analyze_fills.py  feature_ablation.py  fee_sweep.py  fee_sweep_analytical.py  latency_sweep.py  markout.py  queue_model.py  run_cpp_sim.py  threshold_sweep.py
python/mslab/configs/: fees.py  latency.py
python/mslab/features/: build.py  microstructure.py
python/mslab/ingest/: binance_download.py  book.py  collector.py  demo_replay.py  normalize.py  tardis_normalize.py  test_book.py
python/mslab/models/: train_baseline.py  validate.py
python/mslab/research/: dataset.py
python/mslab/tests/: conftest.py  test_parity.py
reports/: final_report.md
