[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mslab"
version = "0.1.0"
description = "C++/Python market-microstructure research and execution-simulation system"
requires-python = ">=3.12"
dependencies = [
    "polars==1.41.2",
    "pyarrow==24.0.0",
    "duckdb==1.5.3",
    "pybind11==3.0.4",
    "scikit-learn==1.9.0",
    "lightgbm==4.6.0",
    "statsmodels==0.14.6",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "scipy==1.17.1",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "websocket-client==1.9.0",
]
